# QtSamples

Sample/: CMakeLists.txt  CMakeWindows.bat
Sample/cmake/: qt_windeployqt.cmake
Sample/resources/: resources.qrc  resources.qrc.autosave  source.txt
Sample/src/: main.cpp  parametersetter.cpp  parametersetter.h  parametersetter.ui  sample_gui.cpp  sample_gui.h  sample_gui.ui
Template Files/New QWidget/: new_widget.cpp  new_widget.h  new_widget.ui
